frontend/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-app
  namespace: app
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "app.yourdomain.com"   # replace with your real subdomain
  rules:
    - backendRefs:
        - name: frontend-app
          port: 3000
